--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,10 +24,10 @@ jobs:
 
       - name: Build Docker image
         run: |
-          IMAGE_NAME=mydockerhubuser/loyaltyx-orchestrator:${GITHUB_SHA::7}
+          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/loyaltyx-orchestrator:${GITHUB_SHA::7}
           docker build -t $IMAGE_NAME .
 
       - name: Push Docker image
         run: |
-          IMAGE_NAME=mydockerhubuser/loyaltyx-orchestrator:${GITHUB_SHA::7}
+          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/loyaltyx-orchestrator:${GITHUB_SHA::7}
           docker push $IMAGE_NAME
