--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,16 +19,15 @@ jobs:
       - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
-          registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker image
         run: |
-          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/loyaltyx-orchestrator:${GITHUB_SHA::7}
+          IMAGE_NAME=naimulhub/loyaltyx-orchestrator:${GITHUB_SHA::7}
           docker build -t $IMAGE_NAME .
 
       - name: Push Docker image
         run: |
-          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/loyaltyx-orchestrator:${GITHUB_SHA::7}
+          IMAGE_NAME=naimulhub/loyaltyx-orchestrator:${GITHUB_SHA::7}
           docker push $IMAGE_NAME
