--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,33 +1,22 @@
-name: Build and Push Docker
+name: Test Docker Login
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
-  build-and-push:
+  test-login:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to DockerHub
+      - name: Debug Secrets
+        run: |
+          echo "DOCKERHUB_USERNAME is set? -> ${{ secrets.DOCKERHUB_USERNAME }}"
+          echo "DOCKERHUB_TOKEN is set? -> ${{ secrets.DOCKERHUB_TOKEN }}"
+      
+      - name: Docker login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build Docker image
-        run: |
-          IMAGE_NAME=naimulhub/loyaltyx-orchestrator:${GITHUB_SHA::7}
-          docker build -t $IMAGE_NAME .
-
-      - name: Push Docker image
-        run: |
-          IMAGE_NAME=naimulhub/loyaltyx-orchestrator:${GITHUB_SHA::7}
-          docker push $IMAGE_NAME
