--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,22 +1,43 @@
-name: Test Docker Login
+name: Build and Push Docker (Bypass Secrets)
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
-  test-login:
+  build-and-push:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      # 1️⃣ Checkout the repo
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Debug Secrets
+      # 2️⃣ Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # 3️⃣ Login to DockerHub (bypass secrets)
+      - name: Docker CLI login
         run: |
-          echo "DOCKERHUB_USERNAME is set? -> ${{ secrets.DOCKERHUB_USERNAME }}"
-          echo "DOCKERHUB_TOKEN is set? -> ${{ secrets.DOCKERHUB_TOKEN }}"
-      
-      - name: Docker login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          echo "dckr_pat_JcrJ4eqgkp3_V6PuTiSDvI1RYpg" | docker login -u naimulhub --password-stdin
+
+      # 4️⃣ Build Docker image
+      - name: Build Docker image
+        run: |
+          IMAGE_NAME=naimulhub/loyaltyx-orchestrator:${GITHUB_SHA::7}
+          docker build -t $IMAGE_NAME .
+
+      # 5️⃣ Push Docker image to DockerHub
+      - name: Push Docker image
+        run: |
+          IMAGE_NAME=naimulhub/loyaltyx-orchestrator:${GITHUB_SHA::7}
+          docker push $IMAGE_NAME
+
+      # 6️⃣ Optional: Tag latest
+      - name: Tag as latest
+        run: |
+          IMAGE_NAME=naimulhub/loyaltyx-orchestrator:latest
+          docker tag naimulhub/loyaltyx-orchestrator:${GITHUB_SHA::7} $IMAGE_NAME
+          docker push $IMAGE_NAME
