--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker (Bypass Secrets)
+name: Build and Push Docker Image
 
 on:
   push:
@@ -10,28 +10,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # 1️⃣ Checkout the repository
+      - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 2️⃣ Setup Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Docker CLI login
-        run: |
-          echo "dckr_pat_JcrJ4eqgkp3_V6PuTiSDvI1RYpg" | docker login -u naimulhub --password-stdin
+      # 3️⃣ Login to Docker Hub
+      - name: Log in to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # 4️⃣ Build Docker image
       - name: Build Docker image
         run: |
-          IMAGE_NAME=naimulhub/loyaltyx-orchestrator:${GITHUB_SHA::7}
-          docker build -t $IMAGE_NAME .
+          SHA_TAG=${GITHUB_SHA::7}
+          docker build -t naimulhub/loyaltyx-orchestrator:$SHA_TAG -t naimulhub/loyaltyx-orchestrator:latest .
 
+      # 5️⃣ Push Docker image
       - name: Push Docker image
         run: |
-          IMAGE_NAME=naimulhub/loyaltyx-orchestrator:${GITHUB_SHA::7}
-          docker push $IMAGE_NAME
-
-      - name: Tag as latest
-        run: |
-          IMAGE_NAME=naimulhub/loyaltyx-orchestrator:latest
-          docker tag naimulhub/loyaltyx-orchestrator:${GITHUB_SHA::7} $IMAGE_NAME
-          docker push $IMAGE_NAME
+          SHA_TAG=${GITHUB_SHA::7}
+          docker push naimulhub/loyaltyx-orchestrator:$SHA_TAG
+          docker push naimulhub/loyaltyx-orchestrator:latest
