--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build and Push Docker
 
 on:
   push:
@@ -10,30 +10,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2️⃣ Setup Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # 3️⃣ Login to Docker Hub
       - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 4️⃣ Build Docker image
       - name: Build Docker image
         run: |
-          SHA_TAG=${GITHUB_SHA::7}
-          docker build -t naimulhub/loyaltyx-orchestrator:$SHA_TAG -t naimulhub/loyaltyx-orchestrator:latest .
+          IMAGE_NAME=naimulhub/loyaltyx-orchestrator:${GITHUB_SHA::7}
+          docker build -t $IMAGE_NAME .
 
-      # 5️⃣ Push Docker image
       - name: Push Docker image
         run: |
-          SHA_TAG=${GITHUB_SHA::7}
-          docker push naimulhub/loyaltyx-orchestrator:$SHA_TAG
-          docker push naimulhub/loyaltyx-orchestrator:latest
+          IMAGE_NAME=naimulhub/loyaltyx-orchestrator:${GITHUB_SHA::7}
+          docker push $IMAGE_NAME
+
